runtimes/core/src/api/snapshots/encore_runtime_core__api__paths__tests__basic.snap
---
source: runtimes/core/src/api/paths.rs
expression: paths
---
main:
  a:
    - endpoint: one
      routes:
        - /foo
        - /foo/
    - endpoint: two
      routes:
        - /foo/bar
        - /foo/bar/
fallback: {}
