runtimes/core/src/api/snapshots/encore_runtime_core__api__paths__tests__fallback.snap
---
source: runtimes/core/src/api/paths.rs
expression: paths
---
main: {}
fallback:
  a:
    - - one
      - - /
        - /*_
