runtimes/core/src/api/snapshots/encore_runtime_core__api__paths__tests__paths_to_register.snap
---
source: runtimes/core/src/api/paths.rs
expression: paths
---
main:
  a:
    - endpoint:
        key: a
        path: /a
      routes:
        - /a
        - /a/
fallback: {}
