runtimes/core/src/api/snapshots/encore_runtime_core__api__paths__tests__tsr_conflict.snap
---
source: runtimes/core/src/api/paths.rs
expression: paths
---
main:
  a:
    - endpoint: one
      routes:
        - /foo/
  b:
    - endpoint: two
      routes:
        - /foo
fallback: {}
