runtimes/core/src/api/snapshots/encore_runtime_core__api__paths__tests__wildcard.snap
---
source: runtimes/core/src/api/paths.rs
expression: paths
---
main:
  a:
    - - one
      - - /
        - /*_
fallback: {}
